--- a/WebLab.cabal
+++ b/WebLab.cabal
@@ -30,6 +30,8 @@ library
       Week1.P1
       Week1.P2
       Week1.P3
+      Week1.P4
+      Week1.P8
   other-modules:
       Paths_WebLab
   hs-source-dirs:
@@ -56,9 +58,12 @@ test-suite WebLab-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Week1.AllTest
       Week1.P1Test
       Week1.P2Test
       Week1.P3Test
+      Week1.P8Test
+      Week1.RunTests
       Paths_WebLab
   hs-source-dirs:
       test
