--- a/WebLab.cabal
+++ b/WebLab.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.6.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Haskell
       Lib
       Week1A.All
       Week1A.P1
@@ -45,7 +46,7 @@ library
   hs-source-dirs:
       src
   build-depends:
-      QuickCheck
+      QuickCheck >=2.14
     , base >=4.7 && <5
   default-language: Haskell2010
 
@@ -85,6 +86,5 @@ test-suite WebLab-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
-    , WebLab
     , base >=4.7 && <5
   default-language: Haskell2010
